sandc/test/fixtures/astRegression/shouldSucceed/InfixPrefix.sand
pub class InfixPrefix {
    foo() {
        -a * b
    }

    foo2() {
        -(if a {} else {}) * b
    }

    foo3() {
        -a * (if b {} else {})
    }

    foo4() {
        -a() * b
    }

    foo5() {
        -a.b * c
    }

    foo6() {
        -a[b] * c
    }
}