sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/EmptyElseIfBody.sand
pub class EmptyElseIfBody {
    foo() {
        (
            if let inline a = b() {
                c()
            } else if {
                
            } else {
                c()
            }
        )
    }
}